feat: 配置不同环境下的构建模式

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "stylelint": "stylelint src/**/*.{html,vue,css,sass,scss} --fix",
     "eslint": "vue-cli-service lint",
-    "lint": "yarn eslint && yarn stylelint"
+    "lint": "yarn eslint && yarn stylelint",
+    "build:pro": "vue-cli-service build",
+    "build:test": "vue-cli-service build --mode test",
+    "build:uat": "vue-cli-service build --mode uat"
   },
   "dependencies": {
     "axios": "^0.19.2",
