--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "dayjs": "^1.8.28",
     "vant": "^2.8.6",
     "vconsole": "^3.3.4",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-navigation": "^1.1.4",
     "vue-router": "^3.2.0",
+    "vue-skeleton-webpack-plugin": "1.2.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
